	 (fixes bug #1764981) (Stuart).
20070821 machine.c,memory.h: note when we have loaded a custom ROM (Fred).
20070821 trdos.c: correct snapshot register writing (Fred).
20070821 if2.c: fix bracket indentation (Fred).
20070821 disk/plusd.c: correct default ROM loading (Fred).
20070821 disk/plusd.c: clean up +D RAM code (Stuart).
20070823 ui/sdl/sdldisplay.c: update screen when only the statusbar has changed
         (thanks, Gergely) (Fred).
20070828 TODO: remove unused file; handled by SF trackers.
20070829 compat.h,compat/{amiga,unix,win32}/paths.c,utils.[ch]: move
	 utils_is_absolute_path() into compatability directories.
20070830 compat.h,widget/filesel.c: fix up widget builds.
20070830 ui/xlib/xdisplay.c: remove debugging bloat.
20070831 BRANCH: xvideo-2007-08-31 for integrating Gergely's xvideo code
	 (patch #1686228).
20070901 fuse.c,profile.[ch]: prevent snapshots from triggering the assert
	 in profile.c (fixes bug #1727669).
20070901 event.c,sound/sfifo.c,ui/{gtk/gtkui.c,xlib/xdisplay.c},
	 widget/filesel.c: return value of malloc() shouldn't be cast.
20070902 debugger/breakpoint.c: fix typo which prevented timed breakpoints
	 from working properly.
20070903 compat/morphos/osname.c: add missing return value from compat_osname
         (thanks, Q-Master) (Fred).
20070903 ui/gtk/fileselector.c: reimplement "last directory" functionality
	 (and some obvious refactoring).
20070903 fuse.c: add missing #include (Stuart).
20070904 disk/plusd.c,divide.c: clear plusd_active and divide_active on a reset
	 (fixes bug #1755555) (Stuart).
20070904 disk/plusd.[ch],periph.c: register plusd_peripherals in periph_setup()
	 instead of periph_update(), and modify +D IO port handlers to return
	 when the +D is not available (fixes #1771585) (Stuart).
20070904 Makefile.am: distribute the timer directory (Stuart).
20070904 z80/coretest.c: remove unused variable (Stuart).
20070905 Makefile.am: allow windres.o to build from a directory other than the
	 source directory (Stuart).